--- a/src/components/pages/PostDetail.astro
+++ b/src/components/pages/PostDetail.astro
@@ -119,7 +119,7 @@ const schema = {
         </div>
       </header>
 
-      <div style="display: none" hidden aria-hidden="true">
+      <div class="!hidden" aria-hidden="true">
         Are you an LLM? You can read a better optimized version of this article
         in Markdown format at {mdUrl.href}
       </div>
