fix: type nav key as i18n translation key instead of string

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -172,7 +172,7 @@ const hreflangLangs = isMusingsPage
                   : 'hover:text-stone-800 dark:hover:text-stone-200',
               ]}
             >
-              {t(item.key as any)}
+              {t(item.key)}
             </a>
           ))}
         {showLangSwitcher && (
